[gd_scene load_steps=3 format=3 uid="uid://d14tdl6ni8oqu"]

[ext_resource type="Script" path="res://scripts/items/AmmoEntity.gd" id="1_nn0ly"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oo816"]
radius = 7.0

[node name="AmmoBase" type="Node2D"]
script = ExtResource("1_nn0ly")

[node name="Icon" type="Sprite2D" parent="."]

[node name="PickupArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource("CircleShape2D_oo816")

[node name="PickupSfx" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_shape_entered" from="PickupArea2D" to="." method="_on_pickup_area_2d_body_shape_entered"]
